# phys_project

./: CMakeLists.txt  CMakeLists.txt.user.2b04965  SoundRecognizer.cpp  main.cpp  soundrecogniser  soundrecogniser.layout  soundrecord.py
include/: CMakeLists.txt
include/headers/: debugging_utils.h  main_framework.h  samples.h
include/src/: CMakeLists.txt  recognise.cpp  record.cpp
include/src/debug/: CMakeLists.txt  replay.cpp
include/src/samples/: A.raw  O.raw  a.h  o.h
